--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ jar {
 	baseName = 'RealEstate'
 	version = '0.0.1-SNAPSHOT'
 }
+
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
@@ -30,27 +31,14 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
-//	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
 
-	compile('com.fasterxml.jackson.core:jackson-core:2.7.3')
-	compile('com.fasterxml.jackson.core:jackson-databind:2.7.3')
-	compile('com.fasterxml.jackson.core:jackson-annotations:2.7.3')
+//	compile('com.fasterxml.jackson.core:jackson-core:2.7.3')
+//	compile('com.fasterxml.jackson.core:jackson-databind:2.7.3')
+//	compile('com.fasterxml.jackson.core:jackson-annotations:2.7.3')
 
 	compile('org.jsoup:jsoup:1.8.3')
 
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
-}
-
-
-//eclipse {
-//	classpath {
-//		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-//		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-//	}
-//}
-
-task wrapper(type: Wrapper) {
-	gradleVersion = '2.9'
 }
